# advent-of-code

./: .gitignore  LICENSE  README.md
2015/: README.md  day1.ts  day10.ts  day11.ts  day12.ts  day13.ts  day14.ts  day15.ts  day16.ts  day17.ts  day18.ts  day19.ts  day2.ts  day20.ts  day21.ts  day22.ts  day23.ts  day24.ts  day25.ts  day3.ts  day4.ts  day5.ts  day6.html  day6.ts  day7.ts  day8.ts  day9.ts  package.json  tsconfig.json
2020/: README.md  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2024/: README.md  go.mod  main.go
2024/1-HistorianHysteria/Part1/: main.go
2024/1-HistorianHysteria/Part2/: main.go
2024/2-Red-NosedReports/Part1/: main.go
2024/2-Red-NosedReports/Part2/: main.go
2024/days/: day1.go  day10.go  day11.go  day12.go  day13.go  day14.go  day15.go  day16.go  day17.go  day18.go  day19.go  day2.go  day20.go  day21.go  day22.go  day23.go  day24.go  day25.go  day3.go  day4.go  day5.go  day6.go  day7.go  day8.go  day9.go
2024/helpers/: flags.go  io.go
2025/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
2025/src/: day_1.rs  day_10.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_9.rs  day_util.rs  lib.rs  main.rs
go/: go.mod
go/helpers/: heap.go  io.go  str.go  structs.go
helpers/: go.mod  str.go
helpers/collections/: heap.go
helpers/io/: io.go
